--- a/music_app/templates/music_app/index.html
+++ b/music_app/templates/music_app/index.html
@@ -19,7 +19,7 @@
     <br><br>
     <div class="row">
         <div class="col-md-2">
-            <form id="go" action="{% url 'go' %}">
+            <form id="go" action="{% url 'index' %}">
                 <div class="form-group">
                     <label for="musicid">Music ID (digits only)</label>
                     <input name="musicid" id="musicid" class="form-control" pattern="[0-9]+" required>
